# rft1d

./: .binstar.yml  .gitignore  CONTRIBUTING.md  MANIFEST  README.md  index.html  params.json  pyproject.toml  setup.py  update_version.py
.github/workflows/: master-push-pypi.yml  push-test-pypi.yml
examples/: random_fields_broken_0.py  random_fields_broken_2.py  smoothness_estimation.py  smoothness_estimation_broken.py  val_broken_0_gauss.py  val_broken_1_t.py  val_broken_2_F.py  val_broken_3_T2.py  val_broken_4_X2.py  val_conj_0_gauss.py  val_conj_1_t.py  val_conj_2_F.py  val_conj_3_T2.py  val_conj_4_X2.py  val_max_0_gaussian_1d.py  val_max_1_onesample_t_0d.py  val_max_1_onesample_t_1d.py  val_max_2_twosample_t_0d.py  val_max_2_twosample_t_1d.py  val_max_3_regress_0d.py  val_max_3_regress_1d.py  val_max_4_anova1_0d.py  val_max_4_anova1_1d.py  val_max_5_onesample_T2_0d.py  val_max_5_onesample_T2_1d.py  val_max_6_twosample_T2_0d.py  val_max_6_twosample_T2_1d.py  val_max_7_cca_0d.py  val_max_7_cca_1d.py  val_max_8_manova1_0d.py  val_max_8_manova1_1d.py  val_upx_0_gauss_cluster.py  val_upx_0_gauss_set.py  val_upx_1_t_cluster.py  val_upx_1_t_set.py  val_upx_2_F_cluster.py  val_upx_2_F_set.py  val_upx_3_T2_cluster.py  val_upx_3_T2_set.py  val_upx_4_X2_cluster.py  (+3 more)
examples/paper/: all_results.py  fig02_EC_HC.py  fig04_fields1d_broken.py  fig06_sf.py  fig07_bonf_sf.py  fig08_bonf_isf.py  fig11_val_cluster.py  (+5 more)
recipe/: meta.yaml
rft1d/: __init__.py  data.py  distributions.py  geom.py  prob.py  random.py
tests/: test_examples.py  test_p_RF.py  test_slow.py  test_uc_RF.py
(+80 files in other folders)
